frame/support/test/tests/pallet_ui/step_013.stderr
error: Invalid pallet::interface, expect item impl
  --> $DIR/step_013.rs:10:2
   |
10 |     pub enum Foo {}
   |     ^^^
